wp-content/themes/soss-catalog-theme/assets/styles/layouts/_product-cat.scss
.tax-product_cat {
  h2 {
    font-size: 2rem;
  }
  p {
    font-size: 1.2rem;
  }
}
.hero-cat {
  justify-content: center;
  align-items: center;
  padding: 1rem;

  // When the layout is [TEXT] [IMAGE], we switch the order at break point
  .image-right {
    &.order-2 {
      order: 2;
    }
  }
  .text-left {
    &.order-1 {
      order: 1;
    }
  }

  @media (max-width: 767.98px) {
    .image-right {
      &.order-2 {
        order: 1;
      }
    }
    .text-left {
      &.order-1 {
        order: 2;
      }
    }
    .value-prop {
      margin-top: 2rem;
    }
  }
}
.value-prop {
  display: flex;
  flex-direction: column;
  justify-content:center;
}
.video-cat {
  max-width: 765px;
  &> .embed-container {
   display: flex;
  }
}
.iframe-embed {
  width: 100%;
  height: 100%;
  border: 0;
}
.servex {
  display: grid;
  grid-template-rows: minmax(300px, 500px);
}
.super {
  width: 100vw;
  position: relative;
  margin-left: -50vw;
  left: 50%;
  padding: 3rem 0;
}
.pitch {

  .heading {
    align-self: end;

    span {
      font-size: 3rem;

    }
  }
  .catch-phrase {
    align-self: start;
    text-align: center;
  }
}
.thick {
  font-weight: 800;
}
.thin {
  font-weight: 100;
}
.finish-chips {
  display: grid;
}
.finish-group {
  display: grid;
  grid-template-columns: repeat( auto-fit, minmax( 90px, 1fr ) );
  grid-gap: 1rem;
  grid-auto-flow: row;
  align-content: space-around;
}
@media (max-width: 767.98px) {
  .finish-group {
    margin-top: 2rem;
  }

}
.swatch {
  display: flex;
  justify-self: center;
}
// Reconfiguring margin bottom and top with 1:1 values
.mbs-1 {
  margin-bottom: 1rem !important;
}
.mbs-2 {
  margin-bottom: 2rem !important;
}
.mbs-3 {
  margin-bottom: 3rem !important;
}
.mbs-4 {
  margin-bottom: 4rem !important;
}
.mbs-5 {
  margin-bottom: 5rem !important;
}
.mbs-6 {
  margin-bottom: 6rem !important;
}
.mbs-7 {
  margin-bottom: 7rem !important;
}
.mts-1 {
  margin-top: 1rem !important;
}
.mts-2 {
  margin-top: 2rem !important;
}
.mts-3 {
  margin-top: 3rem !important;
}
.mts-4 {
  margin-top: 4rem !important;
}
.mts-5 {
  margin-top: 5rem !important;
}
.mts-6 {
  margin-top: 6rem !important;
}
.mts-7 {
  margin-top: 7rem !important;
}
.row-embed-right {
  width: 100%;
  display: grid;
  grid: 30vh / 2fr 1fr;
  align-items: center;
  grid-gap: .5rem;
  overflow: hidden;
  padding: 1rem;
  justify-content: center;
}

.row-embed-left {
  width: 100%;
  display: grid;
  grid: 30vh / 1fr 2fr;
  align-items: center;
  grid-gap: .5rem;
  overflow: hidden;
  padding: 1rem;
  justify-content: center;
  .value-prop {
   flex-direction: column;
    justify-content:center;
  }
}


.ab { //.antique-brass
  background: #a0756c; /* Old browsers */
  background: -moz-linear-gradient(top,  #a0756c 0%, #c99780 5%, #d6a78b 8%, #e8c3a6 10%, #fae5ca 13%, #fffae7 15%, #fbfff0 18%, #fbfff1 21%, #f6f0e0 23%, #f0dac2 26%, #e1bca2 28%, #c99982 31%, #b78473 33%, #926663 38%, #855a54 41%, #734841 46%, #734841 49%, #784b45 51%, #94655b 62%, #9d6d61 72%, #a6756e 82%, #a3726b 87%, #996861 95%, #96655e 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top,  #a0756c 0%,#c99780 5%,#d6a78b 8%,#e8c3a6 10%,#fae5ca 13%,#fffae7 15%,#fbfff0 18%,#fbfff1 21%,#f6f0e0 23%,#f0dac2 26%,#e1bca2 28%,#c99982 31%,#b78473 33%,#926663 38%,#855a54 41%,#734841 46%,#734841 49%,#784b45 51%,#94655b 62%,#9d6d61 72%,#a6756e 82%,#a3726b 87%,#996861 95%,#96655e 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom,  #a0756c 0%,#c99780 5%,#d6a78b 8%,#e8c3a6 10%,#fae5ca 13%,#fffae7 15%,#fbfff0 18%,#fbfff1 21%,#f6f0e0 23%,#f0dac2 26%,#e1bca2 28%,#c99982 31%,#b78473 33%,#926663 38%,#855a54 41%,#734841 46%,#734841 49%,#784b45 51%,#94655b 62%,#9d6d61 72%,#a6756e 82%,#a3726b 87%,#996861 95%,#96655e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a0756c', endColorstr='#96655e',GradientType=0 ); /* IE6-9 */
}

.bb { //.bright-brass
  background: #8a8371; /* Old browsers */
  background: -moz-linear-gradient(top,  #8a8371 0%, #f4eee0 3%, #fcf9f0 5%, #fffffb 8%, #fdfdfb 10%, #fffffb 13%, #fefef4 15%, #fefbe8 18%, #bbb497 21%, #9b916d 23%, #84784e 26%, #766841 28%, #5d502e 31%, #463c21 33%, #362f1d 36%, #2a2215 38%, #332a1b 41%, #443925 44%, #453a1e 46%, #b1a481 49%, #b2a579 51%, #c2b27f 56%, #b8a674 59%, #bda879 62%, #c9b487 64%, #b8a378 67%, #baa57a 69%, #cebc8e 72%, #d3c191 74%, #ccbc89 77%, #bba774 79%, #e5cb98 82%, #674917 85%, #654919 87%, #c5a97a 90%, #c3a87b 92%, #ad9567 95%, #a69061 97%, #c7b283 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top,  #8a8371 0%,#f4eee0 3%,#fcf9f0 5%,#fffffb 8%,#fdfdfb 10%,#fffffb 13%,#fefef4 15%,#fefbe8 18%,#bbb497 21%,#9b916d 23%,#84784e 26%,#766841 28%,#5d502e 31%,#463c21 33%,#362f1d 36%,#2a2215 38%,#332a1b 41%,#443925 44%,#453a1e 46%,#b1a481 49%,#b2a579 51%,#c2b27f 56%,#b8a674 59%,#bda879 62%,#c9b487 64%,#b8a378 67%,#baa57a 69%,#cebc8e 72%,#d3c191 74%,#ccbc89 77%,#bba774 79%,#e5cb98 82%,#674917 85%,#654919 87%,#c5a97a 90%,#c3a87b 92%,#ad9567 95%,#a69061 97%,#c7b283 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom,  #8a8371 0%,#f4eee0 3%,#fcf9f0 5%,#fffffb 8%,#fdfdfb 10%,#fffffb 13%,#fefef4 15%,#fefbe8 18%,#bbb497 21%,#9b916d 23%,#84784e 26%,#766841 28%,#5d502e 31%,#463c21 33%,#362f1d 36%,#2a2215 38%,#332a1b 41%,#443925 44%,#453a1e 46%,#b1a481 49%,#b2a579 51%,#c2b27f 56%,#b8a674 59%,#bda879 62%,#c9b487 64%,#b8a378 67%,#baa57a 69%,#cebc8e 72%,#d3c191 74%,#ccbc89 77%,#bba774 79%,#e5cb98 82%,#674917 85%,#654919 87%,#c5a97a 90%,#c3a87b 92%,#ad9567 95%,#a69061 97%,#c7b283 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8a8371', endColorstr='#c7b283',GradientType=0 ); /* IE6-9 */
}
/* ... */

